src/objects/ClearChoice_Part__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Allergan</fullName>
                </value>
                <value>
                    <fullName>Dysport</fullName>
                </value>
                <value>
                    <fullName>EltaMD</fullName>
                </value>
                <value>
                    <fullName>Galderma</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
                <value>
                    <fullName>Latisse</fullName>
                </value>
                <value>
                    <fullName>SkinMedica</fullName>
                </value>
                <value>
                    <fullName>SkinCeuticals</fullName>
                </value>
                <value>
                    <fullName>SunFx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Injectable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a product is an injectable</description>
        <label>Injectable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a product or service is active or inactive.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Wide_Quantity__c</fullName>
        <description>Sum of quantities across all centers</description>
        <label>Network Wide Quantity</label>
        <summarizedField>ClearChoice_Center_Part__c.Quantity__c</summarizedField>
        <summaryForeignKey>ClearChoice_Center_Part__c.Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Size__c</fullName>
        <description>Just capturing this from the upload file.  No plans to do anything with it at the moment.</description>
        <label>Product Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Product</fullName>
                </value>
                <value>
                    <fullName>Esthetics Product</fullName>
                </value>
                <value>
                    <fullName>Esthetics Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>ClearChoice Part</label>
    <listViews>
        <fullName>Active_Products_and_Services</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Cost__c</columns>
        <columns>Is_Taxable__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Product_Size__c</columns>
        <columns>Type__c</columns>
        <columns>UPC__c</columns>
        <columns>Injectable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products and Services</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPC__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Cost__c</columns>
        <columns>Is_Taxable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Products_Only</fullName>
        <columns>NAME</columns>
        <columns>Part_Description__c</columns>
        <columns>UPC__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Cost__c</columns>
        <columns>Is_Taxable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ClearChoice_Part__c.Product</value>
        </filters>
        <label>Products Only</label>
    </listViews>
    <listViews>
        <fullName>Services_Only</fullName>
        <columns>NAME</columns>
        <columns>Part_Description__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Is_Taxable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ClearChoice_Part__c.Service</value>
        </filters>
        <label>Services Only</label>
    </listViews>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClearChoice Parts</pluralLabel>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>A part with inventory, that will usually be taxed and has a cost, brand, UPC</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>A medical service. This will not use the cost, qty, or upc fields.</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_select_type</fullName>
        <active>true</active>
        <description>User must select a type for the part (Dental Product, Esthetics Product, etc)</description>
        <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must select a Type.</errorMessage>
    </validationRules>
</CustomObject>